--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     color: #fff; /* White text color for contrast */
-    background: url('images/background.jpg') no-repeat center center fixed;
+    background: url('images/background.png') no-repeat center center fixed;
     background-size: cover; /* Cover the entire background */
 }
 
