--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-/* styles.css */
-
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     color: #fff; /* White text color for contrast */
-    background: url('/images/background.png') no-repeat center center fixed;
+    background: url('images/background.png') no-repeat center center fixed;
     background-size: cover; /* Cover the entire background */
 }
 
